[API-AUTO-10] Verify create user successful

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     testImplementation 'io.rest-assured:json-schema-validator:5.5.5'
     testCompileOnly("org.projectlombok:lombok:1.18.38")
     testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
+    testImplementation("net.javacrumbs.json-unit:json-unit:4.1.1")
+    testImplementation("com.fasterxml.jackson.core:jackson-core:2.19.0")
 }
 
 test {
