--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,9 @@ dependencies {
     // logging via Log4j
     runtimeOnly 'org.apache.logging.log4j:log4j-core:2.24.1'
 
-    implementation("org.postgresql:postgresql:42.7.7")
+    testImplementation("org.postgresql:postgresql:42.7.7")
+
+    testImplementation "org.wiremock:wiremock:3.13.1"
 }
 
 test {
